--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="" />
+  <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bal Mitra</title>
+  <title>Bal Mitra School, Prayagraj – Nurturing Education & Holistic Development</title>
+
+  <meta name="description"
+    content="Bal Mitra School in Prayagraj provides a caring, high-quality education for children from preschool to primary levels. Enroll your child for a strong academic foundation and holistic growth." />
+  <meta name="keywords"
+    content="Bal Mitra School, Prayagraj, Best School in Prayagraj, Primary School, Preschool, Education, Holistic Development" />
+  <meta name="author" content="Bal Mitra School" />
+  <meta name="robots" content="index, follow" />
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
