--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <link rel="icon" href="/logo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bal Mitra School, Prayagraj – Nurturing Education & Holistic Development</title>
+  <title>Best School in Prayagraj – Bal Mitra School | Best Learning for Children</title>
 
   <meta name="description"
     content="Bal Mitra School in Prayagraj provides a caring, high-quality education for children from preschool to primary levels. Enroll your child for a strong academic foundation and holistic growth." />
